styles/express-checkout.scss
@import 'helpers/mixins';

$sticky-checkout-padding: 20px;

#express-checkout-form {
  @include breakpoint('md') {
    border-width: 2px;
    border-style: solid;
    background: #F8F8F8;
    box-shadow: 1px -1px 23px rgba(0, 0, 0, 0.04);
    border-radius: 4px;
    padding: 20px;
    grid-gap: 18px;
  }
}

.express-checkout-fields {
  border-width: 2px;
  border-style: solid;
  background: #F8F8F8;
  box-shadow: 1px -1px 23px rgba(0, 0, 0, 0.04);
  border-radius: 4px;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 14px;
  padding: 10px;

  @include breakpoint('md') {
    border: unset;
    background: unset;
    box-shadow: unset;
    padding: unset;
  }
}

.express-checkout-title {
  font-weight: 700;
  font-size: 16px;
  line-height: 144%;
}

.express-checkout-button {
  width: 100%;
  max-width: 900px;
  margin: 0 auto;
}

@keyframes slideFromBottom {
  0% {
    transform: translateY(100%);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

.yc-sticky-checkout {
  visibility: hidden;
  position: fixed;
  transform: translateY(100%);
  transition: 0.3s ease;
  transition-property: all;
  will-change: transform, opacity;
  z-index: 99999;
  width: 100%;
  height: 70vh;
  background-color: white;
  left: 0;
  bottom: 0;
  padding-bottom: 0;

  @include breakpoint('md') {
    height: 54vh;
  }

  .sticky-product-details {
    overflow-y: scroll;
    padding: 0 20px;
    margin-bottom: 90px;

    .options .product-quantity {
      margin-top: 36px;
    }
  }
  .spacer {
    margin-top: 20px;
  }

  .cta-bottom-wrapper {
    width: 100%;
    position: fixed;
    bottom: 0;
    padding: 16px 20px;
    background-color: white;
    border-top: 1px solid #EBEBEB;
  }

  .checkout-form {
    padding-bottom: $sticky-checkout-padding;
  }

  .step-2-wrapper {
    overflow-y: scroll;
    padding: 0 20px;
    margin-bottom: 90px;

    @include breakpoint('md') {
      width: 100%;
      padding: unset;
      max-width: 940px;
      padding: 0 20px;
      margin: 0 auto 100px auto;
    }

    .close-icon {
      display: block;
    }

    .back-icon {
      @include breakpoint('md') {
        display: none;
      }
    }
  }

  .step_1, .step_2 {
    position: relative;
    height: 100%;
    display: flex;
    flex-direction: column;
  }

  .step_1 .yc-product-card .section-2 {
    display: none;
  }

  .step_2 .yc-product-card .section-2 {
    display: block;
  }

  #checkout_step_1, #checkout_step_2 {
    animation: slideFromBottom 0.2s ease-in-out;
    will-change: transform;
  }

  .variant-card-1, .variant-card-2 {
    margin-bottom: 15px;
  }

  .back-icon,
  .close-icon {
    width: 40px;
    height: 40px;
    background: white;
    color: #C8C8C8;
    position: absolute;
    left: 20px;
    top: -39px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 16pt;
    border-radius: 4px 4px 0 0;

    @include breakpoint('md') {
      left: unset;
    }
  }

  .sticky-desktop-wrapper {
    @include breakpoint('md') {
      display: grid;
      grid-template-columns: 1fr 1fr;
      gap: 20px;
      margin-top: 30px;

      .variant-card-2 {
        position: sticky;
        top: 20px;
        height: fit-content;
      }

      .yc-product-card {
        margin-top: 0;

        .section-1 {
          flex-direction: column;

          .image {
            width: 125px;
            height: 106px;
          }
        }

        .section-2 .selected-variants {
          padding: 21px 10px;
        }
      }

      .variant-card-2 {
        margin-bottom: 0;
      }

      .checkout-form {
        padding-bottom: 0;
      }
    }
  }
}

